# quitz

./: .gitignore  README.md  TODOs.md  pyproject.toml  setup_django_shower.sh
gameshower_backend/: manage.py
gameshower_backend/game/: admin.py  consumers.py  htmx_apis.py  models.py  plain_db_apis.py  quiztables.json  routing.py  settings.py  urls.py  views.py
gameshower_backend/game/migrations/: 0001_initial.py  0002_game_current_view_alter_gameparticipant_private_key_and_more.py  0003_remove_jepardycolumn_questions_and_more.py  0004_remove_currentview_jepardy_table_id_and_more.py  0005_game_moderator_key_game_spectator_key.py  0006_game_buzzers_locked.py  0007_game_buzz_player.py  0008_alter_game_buzz_player.py  0009_remove_game_buzz_player_game_buzz_player_id.py  0010_currentview_answer_visible_and_more.py  0011_currentview_timer_currentview_timer_break.py  0012_remove_currentview_timer_and_more.py
gameshower_backend/game/templates/: 404.html
gameshower_backend/game/templates/bases/: base.html  moderator_base.html  player_base.html
gameshower_backend/game/templates/creation/: add_quiz_table_partial.html  full_create.html  game_creation.html  game_page.html  quiz_table_column_modal.html  quiz_table_page.html  quiz_table_partial.html
gameshower_backend/game/templates/game/: create_game.html  game_keys.html  index.html  quiztable_partial.html  score_partial.html  score_setup_partial.html  start_game.html  timer.html
gameshower_backend/game/templates/moderator/: answer_wrap.html  (+6 more)
gameshower_backend/gameshower_backend/: asgi.py  settings.py  urls.py  wsgi.py
(+7 files in other folders)
