[tool.poetry]
name = "gameshower"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = {extras = ["daphne"], version = "^5.1.6"}
channels = {extras = ["daphne"], version = "^4.2.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
